fix: alignment issues on bottom container

--- a/sass/bottom-container.sass
+++ b/sass/bottom-container.sass
@@ -1,7 +1,6 @@
 .bottom-container
     width: 100%
     display: grid
-    align-items: stretch
     font-size: 20px
     margin-top: 10.15em
     grid-template-columns: repeat(2, 1fr)
@@ -10,7 +9,7 @@
     &__get-started
         width: 83.4%
         justify-self: center
-        margin-top: 10.4%
+        margin-top: 18.6%
         font-size: 20px
         margin-bottom: 5.5em
 
@@ -81,7 +80,6 @@
 
     &__image
         width: 100%
-        align-self: center
         grid-row-start: 1
         grid-column-start: 2
         grid-row: span 2
