--- a/sass/list.sass
+++ b/sass/list.sass
@@ -7,8 +7,8 @@
     position: absolute
     justify-content: space-around
     left: 50%
-    transform: translateX(-50%)
-    top: 42.2%
+    transform: translate(-50%, 50%)
+    bottom: 0
 
 
     &__items 
