--- a/sass/top-container.sass
+++ b/sass/top-container.sass
@@ -3,7 +3,7 @@
     background-image: url('./resources/background-image.png')
     background-size: cover
     background-repeat: no-repeat
-    
+    position: relative
     font-size: 20px
     padding: 12.1em 0 18.2em
 
