--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   background-image: url("./resources/background-image.png");
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
   font-size: 20px;
   padding: 12.1em 0 18.2em;
 }
@@ -43,7 +44,6 @@ body {
 .bottom-container {
   width: 100%;
   display: grid;
-  align-items: stretch;
   font-size: 20px;
   margin-top: 10.15em;
   grid-template-columns: repeat(2, 1fr);
@@ -52,7 +52,7 @@ body {
 .bottom-container__get-started {
   width: 83.4%;
   justify-self: center;
-  margin-top: 10.4%;
+  margin-top: 18.6%;
   font-size: 20px;
   margin-bottom: 5.5em;
 }
@@ -121,7 +121,6 @@ body {
 }
 .bottom-container__image {
   width: 100%;
-  align-self: center;
   grid-row-start: 1;
   grid-column-start: 2;
   grid-row: span 2;
@@ -140,8 +139,8 @@ body {
   position: absolute;
   justify-content: space-around;
   left: 50%;
-  transform: translateX(-50%);
-  top: 42.2%;
+  transform: translate(-50%, 50%);
+  bottom: 0;
 }
 .list__items {
   width: 24.1%;
